# yomm2

./: CMakeLists.txt  REFERENCE.md
dev/: run-target
docs/cppnow2018/: cppnow2018.md  rolex.cpp
examples/: CMakeLists.txt
examples/friendship/: CMakeLists.txt  README.md  arc_painter.cpp  edge_painter.cpp  friendship.cpp  geometries.hpp  painter.hpp  segment_painter.cpp  segment_painter.hpp  shape_painters.cpp
include/yorel/: perfect_integer_hash.hpp  yomm2.hpp
include/yorel/yomm2/: runtime.hpp
research/: CMakeLists.txt  hash.cpp  hash.md
src/: yomm2.cpp
tests/: CMakeLists.txt  find_hash.cpp  whitebox.cpp
